cd prod-dodo에서 테스트

--- a/.github/workflows/backend-cd-workflow-prod.yml
+++ b/.github/workflows/backend-cd-workflow-prod.yml
@@ -39,7 +39,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: self-hosted-prod-a
+    runs-on: prod-dodo
     steps:
       - name: Change permission
         run: |
