--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -36,10 +36,10 @@ jobs:
           java-version: "17"
           distribution: "corretto"
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        # with:
-        #   gradle-version: 8.1.1
+      # - name: Setup Gradle
+      #   uses: gradle/actions/setup-gradle@v3
+      # with:
+      #   gradle-version: 8.1.1
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
