--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,9 +1,8 @@
 aws:
   s3:
-    bucket-name: techcourse-project-2024
+    bucket-name: ${BUCKET_NAME}
     server:
-      endpoint: https://d3obq7hxojfffa.cloudfront.net/
-      key-prefix: friendogly/
+      endpoint: https://d1m6m0er0dq0qo.cloudfront.net/
 jwt:
   secret-key: ${JWT_SECRET_KEY}
   access-expiration-time: ${JWT_ACCESS_EXPIRATION_TIME}
