chore: Update backend-pull-request-ci.yml

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -3,8 +3,8 @@ name: backend-ci
 on:
   pull_request:
     branches: [ "develop" ]
-    paths:
-      - 'backend/**'
+    # paths:
+    #   - 'backend/**'
 
 defaults:
   run:
