--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -3,8 +3,8 @@ name: backend-ci
 on:
   pull_request:
     branches: [ "develop" ]
-    # paths:
-    #   - 'backend/**'
+    paths:
+      - 'backend/**'
 
 defaults:
   run:
@@ -13,6 +13,9 @@ defaults:
 jobs:
   build:
     runs-on: friendogly-dev-new
+    permissions:
+      checks: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v4
       
