--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -12,35 +12,18 @@ defaults:
 
 jobs:
   build:
-
-    runs-on: self-hosted-dev
+    runs-on: friendogly-dev-new
     permissions:
       checks: write
-
-      # needed unless run with comment_mode: off
       pull-requests: write
-
-      # only needed for private repository
-      contents: read
-
-      # only needed for private repository
-      issues: read
-
-      # required by download step to access artifacts API
-      actions: read
-
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'corretto'
-
-      # - name: Setup Gradle
-      #   uses: gradle/actions/setup-gradle@v3
-      #   with:
-      #     gradle-version: 8.1.1
+          java-version: "17"
+          distribution: "corretto"
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -50,7 +33,7 @@ jobs:
         with:
           name: "firebase-friendogly-private-key.json"
           json: ${{ secrets.FIREBASE_FRIENDOGLY_PRIVATE_KEY }}
-          dir: './backend/src/main/resources/'
+          dir: "./backend/src/main/resources/"
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build
