--- a/.github/workflows/backend-cd-workflow-dev.yml
+++ b/.github/workflows/backend-cd-workflow-dev.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted-dev
+    runs-on: friendogly-dev-new
 
     steps:
       - name: Checkout Repository
@@ -37,7 +37,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: self-hosted-dev
+    runs-on: friendogly-dev-new
     steps:
       - name: Change permission
         run: |
