fix: hibernate.dialect 속성 추가

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -33,6 +33,7 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+        dialect: org.hibernate.dialect.MySQLDialect
   sql:
     init:
       data-locations:
