test: Accept Count: 30, Max Connection: 120, Max Thread: 60

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
   sql:
     init:
       encoding: utf-8
+
+
+server:
+  tomcat:
+    accept-count: 30
+    max-connections: 120
+    threads:
+      max: 60
