test: Accept Count: 30, Max Connection: 70, Max Thread: 50

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
   sql:
     init:
       encoding: utf-8
+
+server:
+  tomcat:
+    accept-count: 30
+    max-connections: 70
+    threads:
+      max: 50
