--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,9 +11,8 @@ spring:
     init:
       encoding: utf-8
 
-server:
-  tomcat:
-    accept-count: 5
-    max-connections: 50
-    threads:
-      max: 50
+logging:
+  level:
+    org:
+      springframework:
+        cache=DEBUG
