test: Accept Count: 5, Max Connection: 50, Max Thread: 50, Connection Timeout: 5000

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,3 +10,11 @@ spring:
   sql:
     init:
       encoding: utf-8
+
+server:
+  tomcat:
+    accept-count: 5
+    max-connections: 50
+    threads:
+      max: 50
+    connection-timeout: 5000
