--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -81,6 +81,8 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".presentation.ui.playground.onboarding.OnboardingActivity"
+            android:exported="false"/>
 
         <activity
             android:name=".presentation.ui.recentpet.RecentPetActivity"
