--- a/.github/workflows/backend-cd-workflow-prod.yml
+++ b/.github/workflows/backend-cd-workflow-prod.yml
@@ -2,7 +2,7 @@ name: deploy
 
 on:
   push:
-    branches: [ "release/backend" ]
+    branches: [ "main" ]
     paths:
       - "backend/**"
       
